[package]
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2024"
name = "loony-http-server"
version = "0.0.1"
license = "MIT OR Apache-2.0"

[[bin]]
name = "server"
path = "./src/main.rs"

[workspace]
members = [
  "loony-service",
  "loony-server", 
  "loony-router",
]

[dependencies]
deadpool-postgres = { workspace = true }
tokio = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
tokio-postgres = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
slab = { workspace = true }
loony-service = { workspace = true }
loony-server = { workspace = true }
socket2.workspace = true

[workspace.dependencies]
loony-service = {path = "./loony-service"}
loony-server = {path = "./loony-server"}
slab = "0.4.11"
deadpool-postgres = "0.14.1"
tokio = { version = "1.48.0", features = ["full"] }
derive_more = { version = "2.0.1", features = ["full"]}
futures = "0.3.31"
tokio-postgres = "0.7.15"
serde = { version = "1.0.228", features = ['derive'] }
serde_json = "1.0.145"
fxhash = "0.2.1"
http = "1.3.1"
httparse = "1.10.1"
multipart = "0.18.0"
socket2 = "0.6.1"
ahash = "0.8.12"
bytes = "1.10.1"
pin-project = "1.1.10"
futures-util = "0.3.31"
uuid = { version = "1.18.1", features = ["serde", "v1", "v4"] }
cargo-expand = "1.0.118"
thiserror = "2.0.17"
log = "0.4.28"
async-std = { version = "1.13.2", features = ["attributes"]}

